--- a/screen.css
+++ b/screen.css
@@ -1,20 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
 body {
+    font-family: "Plus Jakarta Sans", sans-serif;
     display: flex;
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    flex-wrap: nowrap;
-    font-family: "Plus Jakarta Sans", sans-serif;;
+}
+
+header {
+    width: 500px;
 }
 
 main {
     width: 500px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 h1 {
-    width: 500px;
     text-align: left;
 }
 
